Fixed menu on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,6 +15,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: rgb(248,249,244);
 }
+body.locked {
+  overflow: hidden;
+  height: 100vh;
+}
 article,
 aside,
 details,
